--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ python:
   - "2.7"
 
 env:
-  - VERSION="7.0"
+  - VERSION="7.0" ODOO_REPO="odoo/odoo"
+  - VERSION="7.0" ODOO_REPO="OCA/OCB"
 
 virtualenv:
   system_site_packages: true
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
+  - git clone --branch ${VERSION} --depth 1 https://github.com/OCA/web.git ${HOME}/web
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
-  - travis_install_nightly ${VERSION}
-  - $HOME/maintainer-quality-tools/travis/travis_install_nightly ${VERSION}
+  - travis_install_nightly
 
 script:
-  - travis_run_flake8
-  - travis_run_tests ${VERSION}
+  - travis_run_tests
 
 after_success:
   coveralls
