--- a/base_location_geonames_import/test/import.yml
+++ b/base_location_geonames_import/test/import.yml
@@ -19,7 +19,7 @@
         ], context=context)
     assert len(state_ids) == 1, "There must be 1 LG"
     zip_ids = self.search(cr, uid, [
-        ('name', '=', '16017'),
+        ('zip', '=', '16017'),
         ('city', '=', 'Isola Del Cantone'),
         ('state_id', '=', state_ids[0]),
         ('country_id', '=', ref('base.it'))
@@ -46,7 +46,7 @@
         ], context=context)
     assert len(state_ids) == 1, "There must be 1 LG"
     zip_ids = self.search(cr, uid, [
-        ('name', '=', '16017'),
+        ('zip', '=', '16017'),
         ('city', '=', 'Isola Del Cantone'),
         ('state_id', '=', state_ids[0]),
         ('country_id', '=', ref('base.it'))
