--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "2.7"
 
 env:
-  - VERSION="8.0"
+  - VERSION="8.0" LINT_CHECK="1"
+  - VERSION="8.0" LINT_CHECK="0"
 
 virtualenv:
   system_site_packages: true
