--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ install:
   - pip install unicodecsv
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
-  - travis_install_nightly ${VERSION}
-  - $HOME/maintainer-quality-tools/travis/travis_install_nightly ${VERSION}
+  - travis_install_nightly
 
 script:
-  - travis_run_tests ${VERSION}
+  - travis_run_tests
 
 after_success:
   coveralls
