--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ python:
 
 env:
   - VERSION="8.0" LINT_CHECK="1"
-  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
-  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
+  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="portal_partner_merge"
+  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="portal_partner_merge"
+  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0" INCLUDE="portal_partner_merge"
+  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0" INCLUDE="portal_partner_merge"
 
 virtualenv:
   system_site_packages: true
