--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,24 @@ language: python
 python:
   - "2.7"
 
+
 env:
-  - VERSION="7.0" ODOO_REPO="odoo/odoo"
-  - VERSION="7.0" ODOO_REPO="OCA/OCB"
+  global:
+  - VERSION="7.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
+  - TRANSIFEX_USER='transbot@odoo-community.org'
+  - secure: FMTwZH7ntFOy4XRJWcbwXWFJri3QZgcqsJeIiVyXF2OfOafOYnavVREvaM7nzanrE/OFsDLArXOraIPLC40V6OxEXmSHX4x0PPZE4O7A//GySFlohkb
+
+  matrix:
+  - LINT_CHECK="1"
+  - TRANSIFEX="1"
+  - TESTS="1" ODOO_REPO="odoo/odoo"
+  - TESTS="1" ODOO_REPO="OCA/OCB"
 
 virtualenv:
   system_site_packages: true
 
 install:
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
-  - git clone --branch ${VERSION} --depth 1 https://github.com/OCA/web.git ${HOME}/web
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
 
@@ -26,4 +34,4 @@ script:
   - travis_run_tests
 
 after_success:
-  coveralls
+  - travis_after_tests_success
