--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,20 @@ language: python
 python:
   - "2.7"
 
+
 env:
-  - VERSION="8.0" LINT_CHECK="1"
-  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="portal_partner_merge"
-  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="portal_partner_merge"
-  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0" INCLUDE="portal_partner_merge"
-  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0" INCLUDE="portal_partner_merge"
+  global:
+  - VERSION="8.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
+  - TRANSIFEX_USER='transbot@odoo-community.org'
+  - secure: FMTwZH7ntFOy4XRJWcbwXWFJri3QZgcqsJeIiVyXF2OfOafOYnavVREvaM7nzanrE/OFsDLArXOraIPLC40V6OxEXmSHX4x0PPZE4O7A//GySFlohkb
+
+  matrix:
+  - LINT_CHECK="1"
+  - TRANSIFEX="1"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="portal_partner_merge"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="portal_partner_merge"
+  - TESTS="1" ODOO_REPO="odoo/odoo" INCLUDE="portal_partner_merge"
+  - TESTS="1" ODOO_REPO="OCA/OCB" INCLUDE="portal_partner_merge"
 
 virtualenv:
   system_site_packages: true
@@ -30,4 +38,4 @@ script:
   - travis_run_tests
 
 after_success:
-  coveralls
+  - travis_after_tests_success
