--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
   global:
   - VERSION="7.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
   - TRANSIFEX_USER='transbot@odoo-community.org'
-  - secure: FMTwZH7ntFOy4XRJWcbwXWFJri3QZgcqsJeIiVyXF2OfOafOYnavVREvaM7nzanrE/OFsDLArXOraIPLC40V6OxEXmSHX4x0PPZE4O7A//GySFlohkb
+  - secure: "R3Tr39zWkjHWyKxBuOoxtvkIZNipt+HbPccuh9+fLi5irikIN3y1+YofBbK/H/wqzg6Vv6mnmwlHfXixiDmZRzQ1GidZ3nFqZYhGREp4vuEjBEf+rUb5/Ijrn6Zspgl+CCDR7ET9E3wOLMRV4A39poPgIll0vALzrAdIbdRbDqc="
 
   matrix:
   - LINT_CHECK="1"
