--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ virtualenv:
 install:
   - pip install requests
   - pip install unicodecsv
-  - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
+  - git clone https://github.com/vauxoo-dev/maintainer-quality-tools.git -b master-oca-fix-277 ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
 
