--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ virtualenv:
 install:
   - pip install requests
   - pip install unicodecsv
-  - pip install python-stdnum[VIES]
+  - pip install stdnum
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
