--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,10 @@ env:
   matrix:
   - LINT_CHECK="1"
   - TRANSIFEX="1"
-  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="portal_partner_merge"
-  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="portal_partner_merge"
+  - TESTS="1" ODOO_REPO="odoo/odoo" EXCLUDE="portal_partner_merge,partner_changeset"
+  - TESTS="1" ODOO_REPO="OCA/OCB" EXCLUDE="portal_partner_merge,partner_changeset"
+  - TESTS="1" ODOO_REPO="odoo/odoo" INCLUDE="partner_changeset"
+  - TESTS="1" ODOO_REPO="OCA/OCB" INCLUDE="partner_changeset"
   - TESTS="1" ODOO_REPO="odoo/odoo" INCLUDE="portal_partner_merge"
   - TESTS="1" ODOO_REPO="OCA/OCB" INCLUDE="portal_partner_merge"
 
