--- a/partner_multi_relation/test/test_allow.yml
+++ b/partner_multi_relation/test/test_allow.yml
@@ -1,7 +1,7 @@
 -
  I create a relation allowing the same partner at both ends.
 -
-  !record {model: res.partner.relation.type, id: partner_relations.allow_self}:
+  !record {model: res.partner.relation.type, id: partner_multi_relation.allow_self}:
     name: 'Relation Allow'
     name_inverse: 'Inverse Relation Allow'
     contact_type_right: 'p'
@@ -10,13 +10,13 @@
 -
   I create a partner U for testing purposes
 -
-  !record {model: res.partner, id: partner_relations.test_U}:
+  !record {model: res.partner, id: partner_multi_relation.test_U}:
     name: 'unittests.U'
     image: ''
 -
   I create relation instance U -- (allow) --> U
 -
-  !record {model: res.partner.relation, id: partner_relations.test_allow}:
-    left_partner_id: partner_relations.test_U
-    right_partner_id: partner_relations.test_U
-    type_id: partner_relations.allow_self
+  !record {model: res.partner.relation, id: partner_multi_relation.test_allow}:
+    left_partner_id: partner_multi_relation.test_U
+    right_partner_id: partner_multi_relation.test_U
+    type_id: partner_multi_relation.allow_self
